[package]
name = "carta_wasm"
version = "0.1.0"
authors = ["Andrew Morcom <jubulani@fastmail.fm>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
console_error_panic_hook = "0.1"

# Candidate for removal to reduce dependencies/binary size
console_log = "0.1"

carta-schema = { path = "../../carta-schema" }

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]